tests/snapshots/examples_fixtures/ModuleGraph__ModuleGraphC.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/ModuleGraph/ModuleGraphC.flx
== compile ==
failed (module)
== diagnostics ==
--> compiler error[E024]: MODULE PATH MISMATCH

Module name `ModuleGraph.ModuleGraphC` doesn't match file path `examples/ModuleGraph/ModuleGraphC.flx`.

  --> examples/ModuleGraph/ModuleGraphC.flx:1:1
  |
1 | module ModuleGraph.ModuleGraphC {
  | ^

Hint:
  Rename the module or move the file to match.
== stdout ==
<not executed>
